# CSharp_LearningNote

./: .gitignore  Program.cs  first.cs  值类型.cs  引用类型.cs
ClassAndInstance/: ClassAndInstance.sln
ConsoleApp1/: ConsoleApp1.sln
ConsoleApp3/: Program.cs
ConsoleApp4/: Program.cs
ConsoleApp5/: Program.cs
ConsoleApp6/: Program.cs
ConsoleApp7/: ConsoleApp7.csproj  Program.cs
Csharp_LearningExamples/: Csharp_LearningExamples.sln  Program.cs  TextFile1.txt
Csharp_class/: BankAccount.cs  Csharp_class.sln  GiftCardAccount.cs  InterestEarningAccount.cs  LineOfCreditAccount.cs  Program.cs  Transaction.cs
Csharp_class/cpp_bank_system/: CMakeLists.txt  README.md
Csharp_class/cpp_bank_system/include/: BankAccount.h  GiftCardAccount.h  InterestEarningAccount.h  LineOfCreditAccount.h  Transaction.h
Csharp_class/cpp_bank_system/src/: BankAccount.cpp  GiftCardAccount.cpp  InterestEarningAccount.cpp  LineOfCreditAccount.cpp  Transaction.cpp  main.cpp  main_simple.cpp
DelegateExample/: Program.cs
DelegateUsage1/: Program.cs
DelegateUsage_Callback/: Program.cs
Delegate_Synchronous/: Program.cs
Delegate_asynchronous/: Program.cs
EventCompletionStatement/: Program.cs
EventExample/: Program.cs
EventExamples/: Program.cs
EventSample/: App.xaml.cs  EventSample.sln  MainWindow.xaml  MainWindow.xaml.cs
FormApp/: FormApp.sln
InterfaceExample/: InterfaceExample.csproj  Program.cs
LINQ/: LINQ.sln  Program.cs
MeThodSample/: MeThodSample.sln  Program.cs
MulticastDelegateExample/: Program.cs
PropertySample/: Form1.Designer.cs  Form1.cs  Program.cs  PropertySample.csproj  PropertySample.sln
StaticSample/: Program.cs  StaticSample.csproj  StaticSample.sln
WpfApp/: WpfApp.sln
WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp1.sln
async_await/: Program.cs  Program_1.cs  async_await.sln  breakfast_async.cpp  compile_cpp.bat
delegate_example/: Program.cs
(+686 files in other folders)
